--- a/styles.css
+++ b/styles.css
@@ -1,99 +1,69 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Gabarito&display=swap');
 
-
 :root {
-    --font-family: 'Gabarito', cursive;
-    --primary-color: #01458d;
-    --secondary-color: #157eee;
-    --border-color: #cacaca;
-    --border-color-dark: #2b2828;
-    --background-color: #ffffff;
-  }
-
-
+  --font-family: 'Gabarito', cursive;
+  --primary-color: #01458d;
+  --secondary-color: #157eee;
+  --border-color: #cacaca;
+  --border-color-dark: #2b2828;
+  --background-color: #ffffff;
+}
 
 body {
-   
-    margin: 20px;
+  margin: 20px;
 }
   
 h1 {
-    text-align: center;
+  text-align: center;
 }
   
 label {
-    display: block;
-    margin-top: 10px;
+  display: block;
+  margin-top: 10px;
 }
   
 input{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    width: 100%;
-    font-family: var(--font-family);
-    padding: 10px;
-    border: 1px solid var(--border-color);
-    border-radius: 4px;
-    font-size: 1rem;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  width: 100%;
+  font-family: var(--font-family);
+  padding: 10px;
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  font-size: 1rem;
 }
-  
+
 button {
-    font-size: 1rem;
-    font-weight: 600;
-    width: 100%;
-    padding: 10px;
-    background-color: var(--primary-color);
-    color: var(--background-color);
-    font-family: var(--font-family);
+  font-size: 1rem;
+  font-weight: 600;
+  width: 100%;
+  padding: 10px;
+  background-color: var(--primary-color);
+  color: var(--background-color);
+  font-family: var(--font-family);
 }
-
-
-/* .lift {
-    display: flex;
-    position: absolute;
-    height: 100px;
-    width:50px;
-    background-color: navy;
-    overflow: hidden;
-    z-index: 1;
-} */
-
-/* .floor {
-    width: 100%;
-    height: 100px;
-    background-color: yellowgreen;
-    margin: 10px 0.5%;
-    position: relative;
-    z-index: -1;
-} */
 
 .floor-container {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 150px;
-    padding-inline: 12px;
-    background-color: var(--background-color);
-    border: 2px solid black;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 130px;
+  padding-inline: 12px;
+  background-color: var(--background-color);
+  border: 2px solid black;
 }
 
-/* .lifts {
-    display: flex;
-    flex: 1;
-    justify-content: space-evenly;
-  } */
-
 .lift {
-    justify-content: space-evenly;
-    display: flex;
-    width: 50px;
-    height: 100px;
-    overflow: hidden;
-    position: absolute;
-    border: 2px solid black;
-  }
+  justify-content: space-evenly;
+  display: flex;
+  width: 50px;
+  height: 100px;
+  overflow: hidden;
+  position: relative;
+  justify-content: space-around;
+  border: 2px solid black;
+}
 
 .left-door,
 .right-door {
