--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,6 @@ button {
   align-items: center;
   width: 100%;
   height: 130px;
-  padding-inline: 12px;
   background-color: var(--background-color);
   border: 2px solid black;
 }
@@ -60,30 +59,6 @@ button {
   justify-content: space-evenly;
 }
 
-/* .lift {
-  justify-content: space-evenly;
-  display: flex;
-  width: 80px;
-  height: 100px;
-  overflow: hidden;
-  border: 1px solid black;
-}
-
-.left-door,
-.right-door {
-  border: 2px solid black;
-  width: 150%;
-  height: 220%;
-  background-color: var(--secondary-color);
-
-}
-
-
-.lifts {
-  display: flex;
-  flex: 1;
-  justify-content: space-evenly;
-} */
 
 .lift {
   display: flex;
@@ -100,7 +75,7 @@ button {
   width: 50%;
   height: 100%;
   background-color: var(--primary-color);
-
+  transition: transform 1s ease-in-out; 
 }
 
 .button-up,
@@ -112,3 +87,10 @@ button {
   align-items: center;
 }
 
+.lift-container {
+  position: relative;
+  width: 60px;
+  height: 100px;
+  border: 2px solid black;
+  margin: 5px;
+}
